# hanyuu

./: .gitignore  pyproject.toml
hanyuu/: config.py
hanyuu/database/: __main__.py  connection.py  models.py
hanyuu/database/aod/: update.py
hanyuu/database/main/: __init__.py  connection.py  models.py
hanyuu/helpers/: database.py
hanyuu/utils/: cleanup.py  engine.py
hanyuu/video/: __init__.py
hanyuu/video/videocat/: __init__.py  cat.py
hanyuu/video/videomakers/: __init__.py  base.py  classic.py  onesec.py
hanyuu/webapp/: __main__.py  app.py  config.py  deps.py
hanyuu/webapp/api/: router.py  routes.py
hanyuu/webapp/db/: connection.py  models.py
hanyuu/webapp/routers/: __init__.py  animes.py  difficulties.py  qitems.py  sources.py  timings.py  utils.py
hanyuu/webparse/: utils.py  zlib_memoize.py
hanyuu/webparse/anidb/: __init__.py  api.py  page.py  tools.py
hanyuu/webparse/anime_offline_database/: __init__.py  tools.py
hanyuu/webparse/mal/: __init__.py  api.py
hanyuu/webparse/shiki/: __init__.py  page.py  tools.py
hanyuu/workers/: torrent.py  utils.py
hanyuu/workers/difficulty/: __main__.py
hanyuu/workers/qitems_parser/: __init__.py  __main__.py  tools.py
hanyuu/workers/quiz/: __main__.py
hanyuu/workers/quizpart/: __main__.py
hanyuu/workers/source_finder/: __main__.py
hanyuu/workers/timing/: __main__.py
static/css/: anime.css  anime_list.css  anime_page.css  color_palette.css  common.css  editable_list.css  search.css  search_bar.css  search_results.css  style.css
static/js/: common.js  editable_list.js  script.js  search_results.js
static/video/countdowns/: easy.mkv  hard.mkv  medium.mkv  very easy.mkv  very hard.mkv
templates/: read_animes.html
templates/anime/: read.html  read_all.html  search.html
templates/anime/edit/: difficulty.html  qitem.html  source.html  timing.html
templates/common/: nav.html  search_bar.html
templates/difficulty/: edit.html
templates/qitem/: edit.html
templates/source/: edit.html
templates/timing/: edit.html
(+25 files in other folders)
